k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tetris-game
  labels:
    name: tetris-game
